--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Title</title>
+    <title>Basic Template</title>
 
     <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="apple-touch-icon" href="favicon.ico">
 
     <link rel="stylesheet" href="../css/vendor.min.css">
     <link rel="stylesheet" href="../css/app.min.css">
 
 </head>
 <body>
-<h1>Hello, world!</h1>
+
 
 <main>
-    <div class="main-container">
-        <!--Your Content goes here!-->
+    <div class="main-wrapper">
+        Your content goes here...
     </div>
 </main>
 
 <script src="../js/vendor.min.js"></script>
 <script src="../js/app.min.js"></script>
+
 </body>
 </html>
