--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Basic Template</title>
+    <title>Your Web Application</title>
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!--Place your favicon-->
     <link rel="apple-touch-icon" href="favicon.ico">
 
-    <link rel="stylesheet" href="../css/vendor.min.css">
-    <link rel="stylesheet" href="../css/app.min.css">
+    <!--Place your styles link-->
+    <link rel="stylesheet" href="./dist/css/vendor.min.css">
+    <link rel="stylesheet" href="./dist/css/app.min.css">
 
 </head>
 <body>
 
+<!--Header-->
+<header id="header" class="header"></header>
 
-<main>
-    <div class="main-wrapper">
+<!--Site content-->
+<main id="main" class="site-wrapper">
+    <div class="site-content">
         Your content goes here...
     </div>
 </main>
 
+<!--Footer-->
+<footer id="footer" class="footer"></footer>
+
+<!--Place your scripts link-->
 <script src="../js/vendor.min.js"></script>
 <script src="../js/app.min.js"></script>
-
 </body>
 </html>
